att das aula que faltei

--- a/navbar/style.css
+++ b/navbar/style.css
@@ -46,3 +46,13 @@ ul {
 ul li {
     display: inline-flex;
 }
+
+main {
+    height: 92vh;
+    background-image: url('assets/setup-1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-origin: center;
+    /* background: url('assets/setup-1.jpg') no-repeat center center; */
+    background-size: cover;
+}
